--- a/Final Exam/Base.lproj/Main.storyboard
+++ b/Final Exam/Base.lproj/Main.storyboard
@@ -128,7 +128,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CYn-Ln-Cm5">
-                                        <rect key="frame" x="8" y="93" width="143" height="182"/>
+                                        <rect key="frame" x="8" y="93" width="143" height="181"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                 </subviews>
@@ -146,11 +146,11 @@
                     </view>
                     <navigationItem key="navigationItem" id="pla-7y-E2D"/>
                     <connections>
-                        <outlet property="baseExperienceLabel" destination="L5a-AF-Smy" id="T9g-Uo-iJ0"/>
-                        <outlet property="heightLabel" destination="Sr6-JS-4xS" id="iMt-6c-r03"/>
                         <outlet property="imageView" destination="CYn-Ln-Cm5" id="5gJ-0x-Hcv"/>
-                        <outlet property="nameLabel" destination="D3d-4D-Qcv" id="SrX-UR-tFV"/>
-                        <outlet property="weightLabel" destination="fQ8-yp-8g0" id="fAe-U5-hHS"/>
+                        <outlet property="label1" destination="D3d-4D-Qcv" id="SrX-UR-tFV"/>
+                        <outlet property="lengthLabel" destination="L5a-AF-Smy" id="T9g-Uo-iJ0"/>
+                        <outlet property="locationLabel" destination="fQ8-yp-8g0" id="fAe-U5-hHS"/>
+                        <outlet property="nameLabel" destination="Sr6-JS-4xS" id="iMt-6c-r03"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8o2-dh-PEs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
